--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/glob": "^8.1.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "express-async-errors": "^3.1.1",
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.0.3",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   }
 }
