--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "backend for HMS",
-  "main": "sever.js",
+  "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js",
+    "test": "cross-env NODE_ENV=test USE_SQLITE='true' jest --testTimeout=10000"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +24,11 @@
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
