--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "backend for HMS",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "server": "nodemon app.js",
+    "start": "nodemon app.js",
     "test": "cross-env NODE_ENV=test USE_SQLITE='true' jest --testTimeout=10000"
   },
   "jest": {
