Add config for syncing tables.

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,10 @@ PORT =5000
 
 
 # DB configuration
-USE_SQLITE="true"
+USE_SQLITE=1
+SQL_SYNC_DEBUG=0
+SQL_SYNC_FORCE=0
+
 MYSQL_HOST="127.0.0.1"
 MYSQL_PORT=""
 MYSQL_USERNAME=""
