--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "cross-env NODE_ENV=test USE_SQLITE='true' jest --testTimeout=10000"
+    "test": "cross-env NODE_ENV=test USE_SQLITE=1 jest --testTimeout=10000"
   },
   "jest": {
     "testEnvironment": "node",
