--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.13",
     "axios": "^1.6.8",
     "express": "^4.18.2",
+    "material-ui-confirm": "^3.0.11",
     "nodemon": "^3.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
