--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.0.3",
     "sequelize": "^6.37.1",
