--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "material-ui-confirm": "^3.0.11",
     "nodemon": "^3.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
