--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/x-charts": "^7.1.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
     "react": "^18.2.0",
