--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "material-ui-confirm": "^3.0.11",
     "nodemon": "^3.0.3",
