Add sync alter option to db config.

--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,8 @@ USE_SQLITE=1
 SQL_SYNC_DEBUG=0
 # Performs a force sync. (This will drop all existing tables)
 SQL_SYNC_FORCE=0
+# Alters the tables to match the models.
+SQL_SYNC_ALTER=0
 # Enables logging all queries that are being run
 SQL_LOG_QUERY=1
 
