--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.15",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@mui/styles": "^5.15.15",
     "@mui/x-charts": "^7.3.0",
+    "@mui/x-data-grid": "^7.3.0",
+    "@mui/x-data-grid-generator": "^7.3.0",
     "@mui/x-date-pickers": "^7.1.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
