--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,36 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^7.2.0",
+    "@react-pdf/renderer": "^3.4.2",
+    "@types/chart.js": "^2.9.41",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "express": "^4.18.2",
     "material-ui-confirm": "^3.0.11",
+    "mousetrap": "^1.6.5",
     "nodemon": "^3.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
