--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,18 +19,20 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@mui/x-charts": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
-    "@react-pdf/renderer": "^3.4.2",
+    "@react-pdf/renderer": "^3.4.3",
     "@types/chart.js": "^2.9.41",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.10",
+    "dom-to-image": "^2.6.0",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "material-ui-confirm": "^3.0.11",
     "mousetrap": "^1.6.5",
     "nodemon": "^3.0.3",
-    "@mui/x-charts": "^7.3.0",
-    "dayjs": "^1.11.10",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -40,6 +42,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.7",
     "@types/react": "^18.2.55",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.2.19",
