--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
+    "react-to-pdf": "^1.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
