--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.15",
-    "@mui/x-charts": "^7.3.0",
+    "@mui/x-charts": "^7.3.1",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
     "axios": "^1.6.8",
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.3",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
+    "react-to-pdf": "^1.0.1",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
