--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
-    "@react-pdf/render": "^3.4.4",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "material-ui-confirm": "^3.0.11",
