--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/glob": "^8.1.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
