--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.14",
+    "@mui/x-data-grid": "^7.2.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "material-ui-confirm": "^3.0.11",
     "nodemon": "^3.0.3",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -36,5 +39,9 @@
     "postcss": "^8.4.36",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
-  }
+  },
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
