--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.3",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
+    "react-to-pdf": "^1.0.1",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
