--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.15",
-    "@mui/x-charts": "^7.3.1",
+    "@mui/material": "^5.15.13",
+    "@mui/x-charts": "^7.3.0",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.2.0",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
-    "express": "^4.18.2",
     "material-ui-confirm": "^3.0.11",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
@@ -32,15 +32,12 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/node": "^20.12.7",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.18",
-    "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
