--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "material-ui-confirm": "^3.0.11",
     "nodemon": "^3.0.3",
     "notistack": "^3.0.1",
