--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/x-charts": "^7.3.0",
+    "@mui/x-data-grid": "^7.3.0",
+    "@mui/x-date-pickers": "^7.2.0",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
@@ -34,7 +37,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-pdf": "^7.7.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-to-pdf": "^1.0.1",
+    "styled-components": "^6.1.8",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
