--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main", "dev" ]
 
 jobs:
-  build:
+  build-backend:
 
     runs-on: ubuntu-latest
     defaults:
@@ -34,4 +34,27 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+  
+  build-frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'frontend' 
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        cache-dependency-path: "./frontend/package-lock.json"
+    
+    - run: npm ci
+    - run: npm run build
 
