--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/glob": "^8.1.0",
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.4",
     "nodemon": "^3.0.3",
