--- a/backend/.env
+++ b/backend/.env
@@ -15,6 +15,8 @@ SQL_SYNC_FORCE=1
 SQL_SYNC_ALTER=0
 # Enables logging all queries that are being run
 SQL_LOG_QUERY=1
+# Skips database sync
+SQL_SYNC_SKIP=1
 
 ########################
 ##### MYSQL Config #####
